Bug 282726 - Chat ui crash when clicking settings->configure
Summary: Chat ui crash when clicking settings->configure
Status: RESOLVED FIXED
Alias: None
Product: telepathy
Classification: Unmaintained
Component: text-ui (other bugs)
Version First Reported In: git-latest
Platform: Unlisted Binaries Linux
: NOR major
Target Milestone: 0.4.0
Assignee: Telepathy Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-09-25 08:22 UTC by Daniele E. Domenichelli
Modified: 2018-02-23 18:51 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Daniele E. Domenichelli 2011-09-25 08:22:06 UTC
Click settings -> click configure telepathy chat handler -> crash

Looks like that this bug was introduced with the commit 806d736bc93885aae51a27eaad543c1015205d27 "Force group chat theme to be something sensible when in a group chat"

-- Backtrace:
Application: Telepathy Chat Handler (telepathy-kde-text-ui), signal: Segmentation fault
[Current thread is 1 (Thread 0x7f2dfcc94780 (LWP 3136))]

Thread 2 (Thread 0x7f2de38ac700 (LWP 3137)):
#0  pthread_cond_wait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:162
#1  0x00007f2dfac6bbc7 in ?? () from /usr/lib/libQtWebKit.so.4
#2  0x00007f2dfac6bd29 in ?? () from /usr/lib/libQtWebKit.so.4
#3  0x00007f2deca0e9e3 in ?? () from /var/lib/dcv/lib64/libGL_SYS.so.1.0.0
#4  0x00007f2df66a9b40 in start_thread (arg=<optimized out>) at pthread_create.c:304
#5  0x00007f2df6fdd36d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#6  0x0000000000000000 in ?? ()

Thread 1 (Thread 0x7f2dfcc94780 (LWP 3136)):
[KCrash Handler]
#6  QString (other=) at /usr/include/qt4/QtCore/qstring.h:728
#7  ChatWindowStyle::getTemplateHtml (this=0x4c002f00530055) at /opt/telepathy/telepathy-text-ui/lib/chat-window-style.cpp:165
#8  0x00007f2df9635002 in AdiumThemeView::initialise (this=0x2522620, chatInfo=...) at /opt/telepathy/telepathy-text-ui/lib/adium-theme-view.cpp:138
#9  0x00007f2dddd29204 in AppearanceConfig::AppearanceConfig (this=0x2521840, parent=<optimized out>, args=<optimized out>) at /opt/telepathy/telepathy-text-ui/config/appearance-config.cpp:52
#10 0x00007f2dddd2b544 in KPluginFactory::createInstance<AppearanceConfig, QWidget> (parentWidget=<optimized out>, parent=<optimized out>, args=...) at /usr/include/kpluginfactory.h:473
#11 0x00007f2dfc80ef31 in KPluginFactory::create(char const*, QWidget*, QObject*, QList<QVariant> const&, QString const&) () from /usr/lib/libkdecore.so.5
#12 0x00007f2df98629de in KCModuleLoader::loadModule(KCModuleInfo const&, KCModuleLoader::ErrorReporting, QWidget*, QStringList const&) () from /usr/lib/libkcmutils.so.4
#13 0x00007f2df9867a68 in ?? () from /usr/lib/libkcmutils.so.4
#14 0x00007f2df9868715 in KCModuleProxy::realModule() const () from /usr/lib/libkcmutils.so.4
#15 0x00007f2df9868a19 in KCModuleProxy::useRootOnlyMessage() const () from /usr/lib/libkcmutils.so.4
#16 0x00007f2df9864ae4 in KCMultiDialog::addModule(KCModuleInfo const&, KPageWidgetItem*, QStringList const&) () from /usr/lib/libkcmutils.so.4
#17 0x00007f2df9865983 in KCMultiDialog::addModule(QString const&, QStringList const&) () from /usr/lib/libkcmutils.so.4
#18 0x000000000040edba in ChatWindow::showSettingsDialog (this=0x1d754e0) at /opt/telepathy/telepathy-text-ui/app/chat-window.cpp:415
#19 0x0000000000410d63 in ChatWindow::qt_metacall (this=0x1d754e0, _c=QMetaObject::InvokeMetaMethod, _id=<optimized out>, _a=0x7fff9aebbc50) at /opt/telepathy/telepathy-text-ui/build/app/chat-window.moc:135
#20 0x00007f2df7bb2b1a in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () from /usr/lib/libQtCore.so.4
#21 0x00007f2df88d73e2 in QAction::triggered(bool) () from /usr/lib/libQtGui.so.4
#22 0x00007f2df88d75cf in QAction::activate(QAction::ActionEvent) () from /usr/lib/libQtGui.so.4
#23 0x00007f2df8d0a0f9 in ?? () from /usr/lib/libQtGui.so.4
#24 0x00007f2df8d0fd32 in ?? () from /usr/lib/libQtGui.so.4
#25 0x00007f2dfc28712d in KMenu::mouseReleaseEvent(QMouseEvent*) () from /usr/lib/libkdeui.so.5
#26 0x00007f2df892e016 in QWidget::event(QEvent*) () from /usr/lib/libQtGui.so.4
#27 0x00007f2df8d1129b in QMenu::event(QEvent*) () from /usr/lib/libQtGui.so.4
#28 0x00007f2df88dd9f4 in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib/libQtGui.so.4
#29 0x00007f2df88e317b in QApplication::notify(QObject*, QEvent*) () from /usr/lib/libQtGui.so.4
#30 0x00007f2dfc1c0a66 in KApplication::notify(QObject*, QEvent*) () from /usr/lib/libkdeui.so.5
#31 0x00007f2df7b9ffbc in QCoreApplication::notifyInternal(QObject*, QEvent*) () from /usr/lib/libQtCore.so.4
#32 0x00007f2df88de9c2 in QApplicationPrivate::sendMouseEvent(QWidget*, QMouseEvent*, QWidget*, QWidget*, QWidget**, QPointer<QWidget>&, bool) () from /usr/lib/libQtGui.so.4
#33 0x00007f2df895b464 in ?? () from /usr/lib/libQtGui.so.4
#34 0x00007f2df8959bea in QApplication::x11ProcessEvent(_XEvent*) () from /usr/lib/libQtGui.so.4
#35 0x00007f2df8981d32 in ?? () from /usr/lib/libQtGui.so.4
#36 0x00007f2df31734a3 in g_main_context_dispatch () from /lib/libglib-2.0.so.0
#37 0x00007f2df3173c80 in ?? () from /lib/libglib-2.0.so.0
#38 0x00007f2df3173f1d in g_main_context_iteration () from /lib/libglib-2.0.so.0
#39 0x00007f2df7bcaabf in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#40 0x00007f2df89819ce in ?? () from /usr/lib/libQtGui.so.4
#41 0x00007f2df7b9f1c2 in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#42 0x00007f2df7b9f3bf in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#43 0x00007f2df7ba3567 in QCoreApplication::exec() () from /usr/lib/libQtCore.so.4
#44 0x000000000040af48 in main (argc=1, argv=0x7fff9aebd908) at /opt/telepathy/telepathy-text-ui/app/main.cpp:81
Comment 1 David Edmundson 2011-09-25 09:12:55 UTC
Git commit 4b10e8cf8a54bbfeed7484b0d9c18b7ba82e0454 by David Edmundson.
Committed on 25/09/2011 at 11:12.
Pushed by davidedmundson into branch 'master'.

Fix crash when loading config

BUG: 282726

M  +1    -0    config/appearance-config.cpp

http://commits.kde.org/telepathy-text-ui/4b10e8cf8a54bbfeed7484b0d9c18b7ba82e0454