Fix crash when loading config

BUG: 282726